@@ -1,3 +1,3 @@
 #!/bin/sh
 
-java -Xms4g -Xmx8g -jar ~/gourmet/GourmetServer/spigot-1.20.1.jar -nogui
+java -Xmx8g -jar spigot-1.20.1.jar -nogui -XX:+AlwaysPreTouch -XX:+DisableExplicitGC -XX:+UseG1GC -XX:+UnlockExperimentalVMOptions -XX:MaxGCPauseMillis=50 -XX:G1HeapRegionSize=4M -XX:TargetSurvivorRatio=90 -XX:G1NewSizePercent=50 -XX:G1MaxNewSizePercent=80 -XX:InitiatingHeapOccupancyPercent=10 -XX:G1MixedGCLiveThresholdPercent=50 -XX:+AggressiveOpts
